--- a/JobSeeker.UI/ClientApp/src/app/app.component.html
+++ b/JobSeeker.UI/ClientApp/src/app/app.component.html
@@ -1,6 +1,12 @@
-<body>
-  <app-nav-menu></app-nav-menu>
+<body style="background-image: url('assets/jobseeker.jpg'); background-size: cover">
+    <nav class="navbar navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">BENIVO</a>
+        <span class="navbar-text">
+            Make your employees welcome
+        </span>
+    </nav>
   <div class="container">
-    <router-outlet></router-outlet>
+    <app-jobs></app-jobs>
   </div>
 </body>
+  
